# Engine

./: .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  Cheatsheet.md  Cheatsheet.txt  Doxyfile  Makefile  README.md
.github/workflows/: cpp.yml
include/: Assert.h
include/Log/: Log.h  Timer.h
include/Lua/: MyLua.h
include/Lua/sol/: sol.hpp
include/MyMath/: MyMatrix.h  MyVectors.h
include/rlImGui/: imgui.h  rlImGui.h
src/: FirstScene.cpp  FirstScene.h  Script.lua  main.cpp
src/Engine/: AnimationSystem.cpp  AnimationSystem.h  AnimationSystem.hpp  AudioSystem.cpp  AudioSystem.hpp  Components.h  Components.hpp  Context.h  Engine.cpp  Engine.h  Engine.hpp  Events.hpp  Game.cpp  Game.h  InputSystem.cpp  InputSystem.hpp  Logger.cpp  Logger.h  Logger.hpp  LuaManager.cpp  LuaManager.h  LuaManager.hpp  NetworkManager.cpp  NetworkManager.h  Registry.cpp  Registry.hpp  Renderer.cpp  Renderer.h  Renderer.hpp  ResourceManager.cpp  ResourceManager.h  ResourceManager.hpp  SceneManager.cpp  SceneManager.h  SceneManager.hpp  SystemManager.cpp  SystemManager.h  SystemManager.hpp
src/Engine/Systems/: AnimationSystem.cpp  AnimationSystem.hpp  AudioSystem.cpp  AudioSystem.hpp  InputSystem.cpp  InputSystem.hpp  NetworkEntitySystem.cpp  NetworkEntitySystem.hpp  ParticleSystem.cpp  ParticleSystem.hpp
src/Log/: Log.h
src/Lua/: MyLua.h  MyLua.hpp
src/Utils/: RaylibUtils.cpp  RaylibUtils.h  RaylibUtils.hpp
